# typograffiti

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  cabal.sandbox.config  package.yaml  stack.yaml  typograffiti.cabal  typograffiti2.cabal
app/: Main.hs  Shaped.hs
src/: Typograffiti.hs
src/Graphics/Text/Font/: Render.hs
src/Typograffiti/: Atlas.hs  Cache.hs  GL.hs  Glyph.hs  Rich.hs  Store.hs  Text.hs  Utils.hs
test/: bible.txt  multilingual.txt
typograffiti-core/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml  typograffiti-core.cabal
typograffiti-core/src/: Typograffiti.hs
typograffiti-core/src/Typograffiti/: Atlas.hs  Cache.hs  Glyph.hs  Store.hs  Transform.hs
typograffiti-freetype/: .gitignore  ChangeLog.md  README.md  package.yaml  typograffiti-freetype.cabal
typograffiti-freetype/src/Typograffiti/: Freetype.hs
typograffiti-gl/: package.yaml  typograffiti-gl.cabal
typograffiti-gl/app/: Main.hs
typograffiti-gl/src/Typograffiti/: GL.hs
typograffiti-gl/src/Typograffiti/GL/: Atlas.hs  Cache.hs  Store.hs  Transform.hs
typograffiti-gl/src/Typograffiti/GL/Utils/: Freetype.hs  OpenGL.hs
typograffiti-sdl/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml  typograffiti-sdl.cabal
typograffiti-sdl/app/: Main.hs
typograffiti-sdl/src/Typograffiti/: SDL.hs
typograffiti-sdl/src/Typograffiti/SDL/: Atlas.hs  Cache.hs  Store.hs  Transform.hs
