cabal-version: 1.12

name:           typograffiti
version:             0.2.0.1
synopsis:       Just let me draw nice text already
description:    This is a text rendering library that uses OpenGL and freetype2 to render TTF font strings quickly. It is fast enough to render large chunks of text in real time. This library exists because text rendering is one of the biggest hurdles in Haskell graphics programming - and it shouldn't be!
                Typograffiti includes an MTL style typeclass and a default monad transformer. It does not assume you are using any specific windowing solution. It does assume you are using OpenGL 3.3+.
                Pull requests are very welcome :)
                See https://github.com/schell/typograffiti/blob/master/app/Main.hs for an example.
category:       Graphics
homepage:       https://github.com/schell/typograffiti#readme
bug-reports:    https://github.com/schell/typograffiti/issues
author:         Schell Scivally & Adrian Cochrane
maintainer:     alcinnz@argonaut-constellation.org
copyright:      2018 Schell Scivally, 2023 Adrian Cochrane
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/schell/typograffiti

library
  exposed-modules:
      Typograffiti
      Typograffiti.Atlas
      Typograffiti.Cache
      Typograffiti.GL
      Typograffiti.Store
      Typograffiti.Text
      Typograffiti.Rich
  build-depends:       base >=4.12 && <4.16, linear>=1.20, containers >= 0.6,
                        freetype2 >= 0.2, gl >= 0.8, mtl >= 2.2, stm >= 2.5, text,
                        vector >= 0.12, harfbuzz-pure >= 1.0.2, bytestring >= 0.10
  hs-source-dirs:      src
  default-language:    Haskell2010


executable typograffiti
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.16, typograffiti, sdl2 >= 2.5.4, text, gl, mtl
  hs-source-dirs:      app
  default-language:    Haskell2010

